# Project2-DA

./: .gitignore  CMakeLists.txt  Doxyfile
Code/: main.cpp  tests.cpp
Code/algorithms/: auragorithms.h  free.h
Code/data_structures/: Graph.h  InterferenceMan.cpp  InterferenceMan.h  Menu.cpp  Menu.h  MutablePriorityQueue.h  Parser.cpp  Parser.h  RegAllocator.cpp  RegAllocator.h  SpiderMan.cpp  SpiderMan.h  Web.cpp  Web.h
GeneratedOutputs/: maboy.txt
Input/GeneratedInput/ranges/: generated_ranges1.txt
Input/generated_inputs/ranges/: generated_ranges2.txt  generated_ranges3.txt
Input/generated_inputs/registers/: generated_registers1.txt  (+1 more)
Input/ranges/: generated_ranges4.txt  generated_ranges_fig5.txt  ranges1.txt  ranges2.txt  ranges3.txt  ranges4.txt  ranges5.txt  ranges6.txt  ranges_line.txt  ranges_star.txt  ranges_tree.txt
Input/registers/: 1reg_1spill.txt  2reg_1spill.txt  2reg_1split.txt  2reg_2split.txt  generated_registers_fig5.txt  registers1.txt  registers2.txt  registers_free.txt
Output/: allocation1.txt  allocation2.txt  allocation3.txt  allocation4.txt  allocation5.txt  generated_allocation_fig5.txt  generated_complete.txt  generated_spill_allocation1.txt  generated_split_allocation1.txt  generated_split_allocation2.txt  generated_star.txt  generated_tree.txt  line.txt  maboy.txt  null.txt  spill_allocation2.txt  split_allocation1.txt
Output/GeneratedExpectedOutput/: generated_allocation2  generated_allocation3  generated_allocation3.txt  generated_allocation4.txt  generated_allocation5  generated_allocation6  generated_allocation6.txt
